Add #delete and #update for Post, add partials

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,15 +1,23 @@
-<div class="card mb-3">
+<div class="card border-primary mb-3">
   <h3 class="card-header"><%=post.title %></h3>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+    <h5 class="card-title">
+      Categories:
+      <% post.categories.all.each do |category|%>
+        <span class="badge badge-pill badge-secondary"><%= link_to category.name, user_post_path(id: post.id), style: "color:#ffffff"%></span>
+      <% end%>
+    </h5>
+    <h6 class="card-subtitle text-muted">Tags:
+      <% post.tags.all.each do |tag|%>
+        <span class="badge badge-pill badge-secondary"><%= link_to tag.name, user_post_path(id: post.id), style: "color:#ffffff"%></span>
+      <% end%>
+    </h6>
   </div>
   <div class="card-body">
-    <p class="card-text"><%= post.content%></p>
+    <p class="card-text"><%= post.content[0..100]%>...<%= link_to "show all", user_post_path(id: post.id), class: "card-link"%></p>
   </div>
   <div class="card-body">
-    <a href="http://localhost:3000/users/1/posts/1" class="card-link">Show</a>
-    <a href="#" class="card-link">Another link</a>
+    <p class="card-text"><%= post.content[0..100]%>...<%= link_to "Edit", edit_user_post_path(id: post.id), class: "card-link"%></p>
   </div>
   <div class="card-footer text-muted">
     2 days ago
