--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
-    <%= render partial: "form", locals: {my_url: user_posts_path, post: @post} %>
+    <%= render partial: "form", locals: {my_url: user_posts_path, post: @post, categories: @categories} %>
   </div>
   <div class="col-sm-3"></div>
 </div>
