Add photo for user image

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,12 +10,12 @@
     <h5 class="card-title">
       Categories:
       <% @post.categories.all.each do |category|%>
-        <span class="badge badge-pill badge-secondary"><%= link_to category.name, user_post_path(id: @post.id), style: "color:#ffffff"%></span>
+        <span class="badge badge-pill badge-secondary"><%= link_to category.name, user_post_path(id: @post.id), style: "color:#ffffff", class: "card-link"%></span>
       <% end%>
     </h5>
     <h6 class="card-subtitle text-muted">Tags:
       <% @post.tags.all.each do |tag|%>
-        <span class="badge badge-pill badge-secondary"><%= link_to tag.name, user_post_path(id: @post.id), style: "color:#ffffff"%></span>
+        <span class="badge badge-pill badge-secondary"><%= link_to tag.name, user_post_path(id: @post.id), style: "color:#ffffff", class: "card-link"%></span>
       <% end%>
     </h6>
   </div>
