--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Hello</h1>
-<h1><%= @user.inspect %></h1>
+
+<p>
+<div class="row">
+  <div class="col-sm-1">
+  </div>
+  <div class="col-sm-2">
+    <div class="list-group">
+      <%= link_to user_posts_path(user_id: @user.id), class: "list-group-item list-group-item-action" do %>
+        Posts
+        <span class="badge badge-primary badge-pill"><%= @user.posts.count%></span>
+      <%end %>
+      <%= link_to user_posts_path(user_id: @user.id), class: "list-group-item list-group-item-action" do %>
+        Friends
+        <span class="badge badge-primary badge-pill"></span>
+      <%end %>
+      <%= link_to user_posts_path(user_id: @user.id), class: "list-group-item list-group-item-action" do %>
+        Interests
+        <span class="badge badge-primary badge-pill"></span>
+      <%end %>
+    </div>
+  </div>
+</div>
+</p>
