--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,9 @@
   <div class="col-sm-1">
   </div>
   <div class="col-sm-2">
+    <% if @user.photo.image_data? %>
+      <%= image_tag @user.photo.image_url %>
+    <% end %>
     <div class="list-group">
       <%= link_to user_posts_path(user_id: @user.id), class: "list-group-item list-group-item-action" do %>
         Posts
