--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="col-sm-2">
     <% if @user.photo.image_data? %>
-      <%= image_tag @user.photo.image_url %>
+      <%= image_tag @user.photo.image_url(:thumb) %>
     <% end %>
     <div class="list-group">
       <%= link_to user_posts_path(user_id: @user.id), class: "list-group-item list-group-item-action" do %>
