--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,7 +17,7 @@
     <p class="card-text"><%= post.content[0..100]%>...<%= link_to "show all", user_post_path(id: post.id), class: "card-link"%></p>
   </div>
   <div class="card-body">
-    <p class="card-text"><%= post.content[0..100]%>...<%= link_to "Edit", edit_user_post_path(id: post.id), class: "card-link"%></p>
+    <p class="card-text"></p>
   </div>
   <div class="card-footer text-muted">
     2 days ago
