--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,16 @@
 <p class="lead">
 <div class="row">
+  <div class="col-sm-1">
+  </div>
   <div class="col-sm-2">
+    <%= render partial: "users/user_panel", locals: {user: @user} %>
   </div>
   <div class="col-sm-8">
-        <h1 class="display-3">Posts:</h1>
+    <h1 class="display-3">Posts:</h1>
     <%= button_to 'Create post', new_user_post_path, method: :get, class:  "btn btn-primary"%>
-    <p><%= render partial: "post", collection: @posts %></p>
+    <p>
+      <%= render partial: "post", collection: @posts %>
+    </p>
   </div>
   <div class="col-sm-2">
   </div>
