Add User#update and add link to the sidebar

--- a/app/views/users/_user_panel.html.erb
+++ b/app/views/users/_user_panel.html.erb
@@ -17,5 +17,8 @@
     Interests
     <span class="badge badge-primary badge-pill"></span>
   <%end %>
+  <%= link_to edit_user_path(id: user.id), class: "list-group-item list-group-item-action" do %>
+    Settings
+  <%end %>
 </div>
 </p>
