--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,15 @@
   <div class="col-sm-2">
     <%= render partial: "users/user_panel", locals: {user: @user} %>
   </div>
+  <div class="col-sm-6">
+    <div class="col-sm-6"></div>
+    <div class="col-sm-6">
+<p>
+<h2><%= @user.name %> <%= @user.surname %></h2>
+<%= @user.nickname %>
+</p>
+    </div>
+  </div>
+
 </div>
 </p>
