Add profile to navigation bar, make Post#new on Post#index page

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,8 @@
 <div class="card border-primary mb-3">
-  <h3 class="card-header"><%=post.title %></h3>
+  <h3 class="card-header">
+    <%= link_to user_path(post.user), class: "card-link" do %>
+      <%= image_tag post.user.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: post.user.nickname %>
+      <% end %> <%=post.title %></h3>
   <div class="card-body">
     <h5 class="card-title">
       Categories:
