--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,3 +10,12 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
+
+.little-avatar-circle {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
