--- a/app/views/users/_user_panel.html.erb
+++ b/app/views/users/_user_panel.html.erb
@@ -5,6 +5,9 @@
 </p>
 <p>
 <div class="list-group">
+  <%= link_to user_path(id: user.id), class: "list-group-item list-group-item-action" do %>
+    Profile
+  <%end %>
   <%= link_to user_posts_path(user_id: user.id), class: "list-group-item list-group-item-action" do %>
     Posts
     <span class="badge badge-primary badge-pill"><%= user.posts.count%></span>
