Add jquery view link

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Create post', new_user_post_path(user_id: 2, id: 1), remote: true %>
+<%= link_to 'Create post', new_user_post_path(user_id: @user.id), remote: true %>
