--- a/app/views/posts/_full_post.html.erb
+++ b/app/views/posts/_full_post.html.erb
@@ -1,10 +1,4 @@
-<p class="lead">
-  <div class="row">
-    <div class="col-sm-2">
-    </div>
-    <div class="col-sm-8">
-      <h1 class="display-3"></h1>
-<p><div class="card mb-3">
+<p><div class="card border-primary mb-3">
   <h3 class="card-header"><%=@post.title %></h3>
   <div class="card-body">
     <h5 class="card-title">
@@ -28,16 +22,10 @@
 
 <div class="card-footer text-muted">
   <div class="row">
-  <div class="col-sm-11">
+    <div class="col-sm-11">
+    </div>
+    <div class="col-sm-1">
+      Likes:
+    </div>
   </div>
-  <div class="col-sm-1">
-    Likes:
-  </div>
-  </div>
 </div>
-</div></p>
-</div>
-<div class="col-sm-2">
-</div>
-</div>
-</p>
