--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,7 @@
   <h3 class="card-header">
     <%= link_to user_path(post.user), class: "card-link" do %>
       <%= image_tag post.user.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: post.user.nickname %>
-      <% end %> <%=post.title %></h3>
+    <% end %> <%=post.title %></h3>
   <div class="card-body">
     <h5 class="card-title">
       Categories:
@@ -16,16 +16,19 @@
         <span class="badge badge-pill badge-secondary"><%= link_to tag.name, user_post_path(id: post.id), style: "color:#ffffff"%></span>
       <% end%>
     </h6>
-  </div>z
-  <div class="card-body">
-    <p class="card-text"><%= post.content[0..100]%>...
+  </div>
+  <div id="full-post-<%= post.id %>">
+    <div class="card-body">
+
+      <p class="card-text"><%= post.content[0..100]%>...</p>
       <p><%= link_to 'View more', user_post_path(user_id: post.user.id, id: post.id), remote: true %></p>
-  </div>
-  <div class="card-body">
-    <p class="card-text"></p>
-  </div>
-  <div class="card-footer text-muted">
-    2 days ago
+    </div>
+    <div class="card-body">
+      <p class="card-text"></p>
+    </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
   </div>
 </div>
 </div>
