--- a/app/views/posts/show.js.erb
+++ b/app/views/posts/show.js.erb
@@ -1,1 +1,1 @@
-$("#target-for-change").html("<%= j render(partial: 'show') %>");
+$("#full-post-<%= @post.id%>").html("<%= j render(partial: 'show') %>");
