--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -11,7 +11,14 @@
     <%= form.collection_select :category_id, categories, :id, :name, {class: "form-control"}%>
   </p>
 
-  <p>
-    <%= form.submit class: "btn btn-primary"%>
-  </p>
+  <div class="row">
+    <div class="col-sm-11">
+      <p>
+        <%= form.submit class: "btn btn-primary"%>
+      </p>
+    </div>
+    <div class="col-sm-1">
+      <%= form.submit 'Cancel', class: "btn btn-secondary"%>
+    </div>
+  </div>
 <% end %>
