--- a/app/views/posts/_tag_cloud.html.erb
+++ b/app/views/posts/_tag_cloud.html.erb
@@ -5,7 +5,7 @@
   <ul>
     <li>
       <p>
-      <% categories.each do |category|%>
+      <% tags.each do |category|%>
       <li>
         <span class="badge badge-pill badge-secondary"><%= link_to category.name, main_page_path, style: "color:#ffffff"%></span>
       </li>
