--- a/app/views/posts/main_page.html.erb
+++ b/app/views/posts/main_page.html.erb
@@ -3,7 +3,7 @@
     <div class="col-sm-1">
     </div>
     <div class="col-sm-2">
-      <%= render partial: "tag_cloud", locals: { categories: @categories } %>
+      <%= render partial: "tag_cloud", locals: { tags: @tags } %>
     </div>
     <div class="col-sm-8">
       <h1 class="display-3">Posts:</h1>
