--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -16,6 +16,6 @@
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
-    <%= render partial: "form", locals: {my_url: user_post_url, post: @post, categories: @categories} %>
+    <%= render partial: "posts/tag_form", locals: {my_url: user_post_url, post: @post, categories: @categories} %>
   </div>
 </div>
