--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,12 @@
-<p>
-  <a><%= comment.content%></a>
-</p>
+<div class="card bg-light mb-3">
+  <h3 class="card-header">
+    <%= link_to user_path(id: comment.user.id), class: "card-link" do %>
+      <%= image_tag comment.user.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: comment.user.nickname %>
+    <% end %> <small><%= comment.user.name %> <%= comment.user.surname %></small> </h3>
+    <div class="card-body">
+      <p class="card-text"><%= comment.content %></p>
+    </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
+</div>
