--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,9 +5,9 @@
     <div class="col-sm-2">
     </div>
     <div class="col-sm-8">
-      <%= render partial: "posts/post", locals: { post: @post } %>
+      <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
-      <%= render partial: "comments/comment", collection: @comments.last(5) %>
+      <%= render partial: "comments/comment", collection: @comments %>
       <%= render partial: "comments/form", locals: {comment: @comment} %>
     </div>
   </div>
