Fix relation between user and comments: has_may belongs_to non polymorphic

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
       <%= render partial: "comments/comment", collection: @comments %>
-      <%= render partial: "comments/form", locals: {comment: @comment} %>
+      <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable} %>
     </div>
   </div>
 </p>
