--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
       <%= render partial: "comments/comment", collection: @comments %>
-      <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable} %>
+      <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable, my_url: user_post_comments_path(post_id: @commentable.id)} %>
     </div>
   </div>
 </p>
