--- a/app/views/posts/_tag_form.html.erb
+++ b/app/views/posts/_tag_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with model: post, url: my_url, local: true do |form| %>
+<%= bootstrap_form_with model: post, url: my_url, remote: true do |form| %>
   <p>
     <%= form.text_area :title%>
   </p>
