--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,7 +7,9 @@
     <div class="col-sm-8">
       <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
-      <%= render partial: "comments/comment", collection: @comments %>
+      <div id="comments">
+        <%= render partial: "comments/comment", collection: @comments %>
+      </div>
       <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable, my_url: user_post_comments_path(post_id: @commentable.id)} %>
     </div>
   </div>
