--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -7,10 +7,12 @@
     <div class="col-sm-8">
       <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
-      <div id="comments">
+      <div id="comments-post-<%= @commentable.id %>">
         <%= render partial: "comments/comment", collection: @comments %>
       </div>
-      <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable, my_url: user_post_comments_path(post_id: @commentable.id)} %>
+      <div id="comments-post-create">
+        <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable, my_url: user_post_comments_path(post_id: @commentable.id)} %>
+      </div>
     </div>
   </div>
 </p>
