Add comment button to make UX right

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -3,8 +3,8 @@
     <div id="comments-show-<%=@commentable.id %>">
       <%= render partial: "comments/comment", collection: @comments %>
     </div>
-    <div id="comments-show-create">
-      <%= render partial: "comments/form", locals: {comment: @comment, commentable: @commentable, my_url: user_post_comment_comments_path(comment_id: @commentable.id)} %>
+    <div id="comments-show-create-<%=@commentable.id %>">
+      <%= render partial: "comments/new", locals: {my_url: new_user_post_comment_comment_path(comment_id: params[:id])} %>
     </div>
   </h3>
 </div>
