--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with model: comment, url: my_url, method: "post", remote: true, format: :json do |form| %>
+<%= bootstrap_form_with model: comment, url: my_url, method: "post", remote: true do |form| %>
   <p>
     <%= form.text_area :content%>
   </p>
