Fix style, make comment tree look pretty

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,10 +1,9 @@
-<div class="card bg-light mb-3">
-  <h3 class="card-header">
+
+  <div class="card-body">
     <div id="comments-show-<%=@commentable.id %>">
       <%= render partial: "comments/comment", collection: @comments %>
     </div>
     <div id="comments-show-create-<%=@commentable.id %>">
       <%= render partial: "comments/new", locals: {my_url: new_user_post_comment_comment_path(comment_id: params[:id])} %>
     </div>
-  </h3>
-</div>
+  </div>
