Check style with rubocop and fix it

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,12 +2,12 @@
   <h3 class="card-header">
     <%= link_to user_path(id: comment.user.id), class: "card-link" do %>
       <%= image_tag comment.user.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: comment.user.nickname %>
-    <% end %> <small><%= comment.user.name %> <%= comment.user.surname %></small> </h3>
-    <div class="card-body">
-      <p class="card-text"><%= comment.content %></p>
-
-      <div id="comment-<%= comment.id %>">
-        <%= link_to image_tag('comment.png', width: "30", height: "30"), user_post_comment_path(id: comment.id),  remote: true %>
-      </div>
+    <% end %> <small><%= comment.user.name %> <%= comment.user.surname %></small>
+  </h3>
+  <div class="card-body">
+    <p class="card-text"><%= comment.content %></p>
+    <div id="comment-<%= comment.id %>">
+      <%= link_to image_tag('comment.png', width: "30", height: "30"), user_post_comment_path(id: comment.id),  remote: true %>
     </div>
+  </div>
 </div>
