--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,9 +1,7 @@
 <p class="lead">
   <div class="row">
-    <div class="col-sm-1">
-    </div>
-    <div class="col-sm-2">
-    </div>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-2"></div>
     <div class="col-sm-8">
       <%= render partial: "posts/post", locals: { post: @commentable } %>
       Comments:
