--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <meta name='turbolinks-visit-control' content='reload'>
     <script>
         document.addEventListener("DOMContentLoaded", function(){
-            initMap(<%="53.901130"%>, <%="27.563753"%>)
+            initMap(<%= User.first.location.latitude%>, <%= User.first.location.longitude%>, "fullmatching")
         });
     </script>
 <% end %>
@@ -29,12 +29,8 @@
 </div>
 
 <script>
-    function initMap(lat, lng) {
+    function initMap(lat, lng, icon_type) {
         var myCoords = new google.maps.LatLng(lat, lng);
-        var mapOptions = {
-            center: myCoords,
-            zoom: 16
-        };
         var iconBase = 'https://developers.google.com/maps/documentation/javascript/examples/full/images/';
         var icons = {
             friend: {
@@ -50,13 +46,34 @@
                 icon: "https://img.icons8.com/dusk/50/000000/marker.png"
             }
         };
+
+        let pos = position();
+        var MyPos = new google.maps.LatLng(pos.lat, pos.lng)
+
+        var mapOptions = {
+            center: MyPos,
+            zoom: 16
+        };
         var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
         var marker = new google.maps.Marker({
-            position: myCoords,
+            position: MyPos,
             animation: google.maps.Animation.DROP,
             map: map,
-            icon: icons["halfmatching"].icon,
+            icon: icons[icon_type].icon,
             draggable: true
         });
+    }
+    function position(){
+        let pos;
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition( function(position) {
+                pos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
+            });
+        }
+        return pos;
     }
 </script>
