--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <meta name='turbolinks-visit-control' content='reload'>
     <script>
         document.addEventListener("DOMContentLoaded", function(){
-            initMap(<%= User.first.location.latitude%>, <%= User.first.location.longitude%>, "fullmatching")
+            initMap( <%=@user.id %>, <%= User.first.location.latitude%>, <%= User.first.location.longitude%>, "fullmatching")
         });
     </script>
 <% end %>
@@ -25,46 +25,18 @@
       <div id="map"></div>
     </p>
     </div>
+      <%= button_to 'Share location', edit_user_path(user: {latitude: pos.lat, longitude: pos.lng}), method: :put, class: "btn btn-primary", remote: true %>
   </div>
 </div>
 
 <script>
-    function initMap(lat, lng, icon_type) {
-        var myCoords = new google.maps.LatLng(lat, lng);
-        var iconBase = 'https://developers.google.com/maps/documentation/javascript/examples/full/images/';
-        var icons = {
-            friend: {
-                icon: "https://img.icons8.com/dusk/50/000000/user-location.png"
-            },
-            fullmatching: {
-                icon: "https://img.icons8.com/dusk/64/000000/visit.png"
-            },
-            halfmatching: {
-                icon: "https://img.icons8.com/wired/64/000000/visit.png"
-            },
-            current_user: {
-                icon: "https://img.icons8.com/dusk/50/000000/marker.png"
-            }
-        };
+    function initMap(id, lat, lng, icon_type) {
 
-        let pos = position();
-        var MyPos = new google.maps.LatLng(pos.lat, pos.lng)
+        let pos = position(id, icon_type);
+        return pos
 
-        var mapOptions = {
-            center: MyPos,
-            zoom: 16
-        };
-        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
-
-        var marker = new google.maps.Marker({
-            position: MyPos,
-            animation: google.maps.Animation.DROP,
-            map: map,
-            icon: icons[icon_type].icon,
-            draggable: true
-        });
     }
-    function position(){
+    function position(id, icon_type){
         let pos;
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition( function(position) {
@@ -72,8 +44,44 @@
                     lat: position.coords.latitude,
                     lng: position.coords.longitude
                 };
+
+                var MyPos = new google.maps.LatLng(pos.lat, pos.lng)
+
+                var mapOptions = {
+                    center: MyPos,
+                    zoom: 16
+                };
+
+                var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+                var icons = {
+                    friend: {
+                        icon: "https://img.icons8.com/dusk/50/000000/user-location.png"
+                    },
+                    fullmatching: {
+                        icon: "https://img.icons8.com/dusk/64/000000/visit.png"
+                    },
+                    halfmatching: {
+                        icon: "https://img.icons8.com/wired/64/000000/visit.png"
+                    },
+                    current_user: {
+                        icon: "https://img.icons8.com/dusk/50/000000/marker.png"
+                    }
+                };
+
+                var marker = new google.maps.Marker({
+                    position: MyPos,
+                    animation: google.maps.Animation.DROP,
+                    map: map,
+                    icon: icons[icon_type].icon,
+                    draggable: true
+                });
             });
         }
         return pos;
+    }
+
+    function location(){
+
     }
 </script>
