--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,25 @@
       <div id="map"></div>
     </p>
     </div>
-      <%= button_to 'Share location', edit_user_path(user: {latitude: pos.lat, longitude: pos.lng}), method: :put, class: "btn btn-primary", remote: true %>
+    <button id="id_button" class="btn btn-primary" onclick="getLocation()"> Confirm location </button>
+<script>
+    function getLocation(){
+        console.log("button pressed")
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition( function(position) {
+                pos = {
+                    lat: position.coords.latitude,
+                    lng: position.coords.longitude
+                };
+                $.ajax({
+                    url : "http://localhost:3000/users/" + <%=@user.id %>,
+                    type : "put",
+                    data : { user: { latitude: pos.lat, longitude: pos.lng } }
+                });
+            });
+        }
+    }
+</script>
   </div>
 </div>
 
@@ -76,12 +94,9 @@
                     icon: icons[icon_type].icon,
                     draggable: true
                 });
+
             });
         }
         return pos;
-    }
-
-    function location(){
-
     }
 </script>
