--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,8 +32,8 @@
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition( function(position) {
                 pos = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
+                    lat: marker.getPosition().lat(),
+                    lng: marker.getPosition().lng()
                 };
                 $.ajax({
                     url : "http://localhost:3000/users/" + <%=@user.id %>,
@@ -48,12 +48,15 @@
 </div>
 
 <script>
+    let marker
+
     function initMap(id, lat, lng, icon_type) {
 
         let pos = position(id, icon_type);
         return pos
 
     }
+
     function position(id, icon_type){
         let pos;
         if (navigator.geolocation) {
@@ -87,7 +90,7 @@
                     }
                 };
 
-                var marker = new google.maps.Marker({
+                marker = new google.maps.Marker({
                     position: MyPos,
                     animation: google.maps.Animation.DROP,
                     map: map,
@@ -95,8 +98,11 @@
                     draggable: true
                 });
 
+                google.maps.event.addListener(marker, 'drag', function(evt){
+                    console.log("marker is being dragged" + evt.latLng.lat().toFixed(3) + ":" + evt.latLng.lng().toFixed(3));
+                });
+
             });
         }
-        return pos;
     }
 </script>
