--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,15 @@
   -moz-border-radius: 50%;
 }
 
+.medium-avatar-circle {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+}
+
 .tagcloud ul {
   margin: 0;
   padding: 0;
