--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,7 +3,8 @@
   <h3 class="card-header">
     <%= link_to user_path(id: post.user.id), class: "card-link" do %>
       <%= image_tag post.user.photo.image_url(:small), class: "little-avatar-circle", data: { toggle: "tooltip", placement: "left"}, title: post.user.nickname %>
-    <% end %> <%=post.title %></h3>
+    <% end %> <%=post.title %>
+  </h3>
   <div class="card-body">
     <h5 class="card-title">
       Categories:
