--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,12 @@
     </div>
     <div class="col-sm-2">
       <%= render partial: "users/user_panel", locals: {user: @user} %>
+      <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-6">
+          <%= button_to "Request friendship", user_friendship_requests_path(user_id: @user.id), method: :post, class: "btn btn-secondary", remote: true%>
+        </div>
+      </div>
     </div>
     <div class="col-sm-6">
       <div class="col-sm-6"></div>
