--- a/app/assets/stylesheets/friendship_requests.scss
+++ b/app/assets/stylesheets/friendship_requests.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Friendship_requests controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div.person{
+  display: inline-block;
+  padding: 30px;
+  margin: 2.5px;
+}
+div.info{
+  padding: 5px;
+}
