Make views style better

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,7 @@
 <% end %>
 <p>
   <div class="row">
-    <div class="col-sm-1">
-    </div>
+    <div class="col-sm-1"></div>
     <div class="col-sm-2">
       <%= render partial: "users/user_panel", locals: {user: @user} %>
       <div class="row">
