--- a/app/views/friendships/_friends_list.html.erb
+++ b/app/views/friendships/_friends_list.html.erb
@@ -1,6 +1,5 @@
-  <div class="col-sm-2"></div>
+<div class="col-sm-2"></div>
   <div class="col-sm-10">
-
     <p></p>
     <div class="row">
       <div class="col-sm-6">
@@ -14,3 +13,4 @@
       </div>
     </div>
   </div>
+</div>
