--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
@@ -36,6 +36,8 @@
       </ul>
     </div>
   </nav>
-    <%= yield %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  <%= yield %>
   </body>
 </html>
