Fix in rendering user page after sign in

--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,9 +1,8 @@
 <!-- app/views/photos/_form.html.erb -->
-
-<%= bootstrap_form_with model: @photo, url: user_photos_path, local: true do |f| %>
+<h2>Your photo</h2>
+<%= bootstrap_form_with model: @photo, url: user_photos_path, remote: true do |f| %>
   <%= render "photos/errors", object: @photo %>
 
-  <%= f.label :image %>
   <%= f.file_field :image %>
 
   <%= f.submit %>
