--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,17 @@
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-sm-2">
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-8">
+    <h1>Input profile information</h1>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="50"></div>
+    </div>
+    <p></p>
     <div class="row">
+      <div class="col-sm-3">
+      </div>
       <div class="col-sm-5" id="sign-up">
-        <h1>General information</h1>
+        <h2>General information</h2>
         <%= render partial: "users/form", locals: {my_url: user_users_information_path(user_id: @user.id), user: @user} %>
       </div>
     </div>
