--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,18 @@
 @import "bootstrap/scss/bootstrap";
 @import "bootswatch/dist/minty/bootswatch";
 
+body, html{
+  padding: 0;
+  margin: 0;
+}
+
+.my-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .avatar-circle {
   width: 300px;
   height: 300px;
