--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="my-row">
   <div class="col-sm-4">
   </div>
   <div class="col-sm-6">
-    <div class="row">
+    <div class="my-row">
       <div class="col-sm-5" id="sign-up">
         <h1>Sign up</h1>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
