--- a/app/views/friendships/_friends_list.html.erb
+++ b/app/views/friendships/_friends_list.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-2"></div>
   <div class="col-sm-10">
     <p></p>
-    <div class="row">
+    <div class="my-row">
       <div class="col-sm-6">
 
         <div class="col-sm-2"></div>
