--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="my-row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
     <h1><%= @user.name %></h1>
@@ -12,8 +12,7 @@
   </div>
   <div class="col-sm-3"></div>
 </div>
-<div class="row"><p></p></div>
-<div class="row">
+<div class="my-row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
     <%= render partial: "posts/tag_form", locals: {my_url: user_post_url, post: @post, categories: @categories} %>
