--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">
-<div class="row">
+<div class="my-row">
   <div class="col-sm-1">
   </div>
   <div class="col-sm-2">
@@ -11,8 +11,6 @@
     <p>
         <%= render partial: "post", collection: @posts %>
     </p>
-  </div>
-  <div class="col-sm-2">
   </div>
 </div>
 </p>
