--- a/app/views/users/_user_panel.html.erb
+++ b/app/views/users/_user_panel.html.erb
@@ -8,6 +8,7 @@
   <%end %>
 </p>
 <p>
+<%if user==current_user %>
 <div class="list-group">
   <%= link_to user_path(id: user.id), class: "list-group-item list-group-item-action" do %>
     Profile
@@ -33,3 +34,6 @@
   <%end %>
 </div>
 </p>
+<%else %>
+  hello world
+<%end %>
